# goit-pythonweb-hw-12

./: .coverage  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 53b8dd773e7d_add_to_model_user_filed_confirmed.py  63fe858eba34_add_user_role.py  721c5a50e919_add_refresh_token.py  7c26c9eb9623_init.py  c246af6747d5_add_user.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
tests/: conftest.py  test_contacts_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_integration_utils.py  test_users_repository_unit.py
